service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flinks-nginx-service
  namespace: flinks
spec:
  selector:
    uri: flinksnginx
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 5000
